# noormsql

./: README.md  justfile  pyproject.toml
noormsql/: __init__.py  _compat.py
tests/: test_timple_query.py
